--- a/src/App-screen.css
+++ b/src/App-screen.css
@@ -27,40 +27,15 @@
   .skill-container h3 {
     font-size: 110%;
   }
-  
+
   .skill-container img {
     width: 90px;
     height: 90px;
   }
 
-  /* Project styling @ 401px - 800px */
-
   .projects-container h1 {
     font-size: 200%;
     border: 3px solid black;
-  }
-
-  .projects-tony-pics {
-    height: 300px;
-  }
-
-  .projects-desktop-view {
-    width: 300px;
-    border: 2px solid black;
-  }
-
-  .projects-mobile-view {
-    width: 100px;
-    bottom: 100px;
-    left: 125px;
-    border: 2px solid black;
-  }
-
-  .tony-portfolio-description {
-    font-size: 75%;
-    width: 150px;
-    margin-left: 25px;
-    margin-top: 0;
   }
 }
 
@@ -80,61 +55,93 @@
   }
 
   /* Skills styling @ < 400px */
-  
+
   .skills-container h1 {
     font-size: 150%;
     border: 2px solid black;
   }
-  
+
   .skills-icon-container {
     width: 100%;
   }
 
   /* Skill styling @ < 400px */
-  
+
   .skill-container h3 {
     font-family: 'merriweather', serif;
     font-size: 100%;
   }
-  
+
   .skill-container img {
     width: 80px;
     height: 80px;
   }
 
-  /* Projects styling @ < 400px */
-
-  .projects-tony-container {
-    flex-wrap: wrap;
-  }
-
   .projects-container h1 {
-    font-size: 200%;
-    border: 3px solid black;
+    font-size: 150%;
+    border: 2px solid black;
+  }
+}
+
+/* Styling for projects */
+
+@media (max-width: 1200px) and (min-width: 800px) {
+  .projects-tony-container {
+    width: 800px;
+    border: 1px solid black;
   }
 
   .projects-tony-pics {
-    height: 300px;
+    height: 250px;
   }
 
   .projects-desktop-view {
-    width: 300px;
-    border: 2px solid black;
+    width: 400px;
   }
 
   .projects-mobile-view {
-    width: 100px;
-    bottom: 100px;
-    left: 125px;
-    border: 2px solid black;
+    position: static;
+    width: 20%;
+    margin-top: -150px;
+    margin-left: 60%;
+  }
+
+  .tony-portfolio-description {
+    font-size: 100%;
+    width: 250px;
+    margin-left: 60px;
+  }
+}
+
+@media (max-width: 800px) {
+  .projects-tony-container {
+    display: block;
+    width: auto;
+  }
+
+  .projects-tony-pics {
+    height: auto;
+  }
+
+  .projects-desktop-view {
+    width: 60%;
+    border: 1px solid black;
+  }
+
+  .projects-mobile-view {
+    position: static;
+    width: 20%;
+    margin-top: -150px;
+    margin-left: 60%;
+    border: 1px solid black;
   }
 
   .tony-portfolio-description {
     font-size: 75%;
-    width: 80vw;
-    margin-top: -50px;
+    width: 60%;
     margin-left: auto;
     margin-right: auto;
+    margin-top: 5vh;
     text-align: center;
   }
 }
