--- a/src/App-screen.css
+++ b/src/App-screen.css
@@ -7,7 +7,7 @@
 
   .intro-name {
     font-size: 200%;
-    border: 3px solid black;
+    margin-bottom: 15vh;
   }
 
   .intro-introduction {
@@ -28,7 +28,7 @@
   /* Skill styling @ 401px - 800px */
 
   .skill-container h3 {
-    font-size: 110%;
+    font-size: 90%;
   }
 
   .skill-container img {
@@ -72,7 +72,7 @@
 
   .skill-container h3 {
     font-family: 'merriweather', serif;
-    font-size: 100%;
+    font-size: 70%;
   }
 
   .skill-container img {
