--- a/src/App.css
+++ b/src/App.css
@@ -17,15 +17,15 @@ body {
 }
 
 .intro-name {
-  font-family: "Expletus Sans", cursive;
+  font-family: "Roboto", sans-serif;
   font-size: 350%;
-  margin: 10vh auto 15vh auto;
+  margin: 10vh auto 10vh auto;
   padding: 2%;
   width: fit-content;
 }
 
 .intro-introduction {
-  font-family: 'Abril Fatface', cursive;
+  font-family: 'Lato', sans-serif;
   width: 50%;
   margin-left: auto;
   margin-right: auto;
@@ -34,7 +34,7 @@ body {
   border: 3px solid black;
   background-color: #333;
   color: white;
-  opacity: 0.5;
+  opacity: 0.65;
 }
 
 @media (max-width: 1100px) {
@@ -48,11 +48,11 @@ body {
 /* SKILLS STYLING */
 
 .skills-container {
-  min-height: 120vh;
+  min-height: 90vh;
 }
 
 .skills-container h2 {
-  font-family: 'Expletus Sans', cursive;
+  font-family: 'Roboto', sans-serif;
   font-size: 250%;
   margin: 10vh auto 10vh auto;
   padding: 2%;
@@ -71,16 +71,23 @@ body {
 
 .skill-container {
   margin: 5%;
+  border: 3px solid #555;
 }
 
 .skill-container h3 {
-  font-family: 'Abril Fatface', cursive;
+  font-family: 'Roboto', sans-serif;
   font-size: 125%;
+  background-color: #555;
+  color: #ddd;
+  margin-top: 15px;
+  margin-bottom: auto;
+  padding-top: 5px;
 }
 
 .skill-container img {
   width: 150px;
   height: 150px;
+  padding-top: 5px;
 }
 
 @media (max-width: 1100px) and (min-width: 801px) {
@@ -100,7 +107,7 @@ body {
 }
 
 .projects-container h2 {
-  font-family: 'Expletus Sans', cursive;
+  font-family: 'Roboto', sans-serif;
   font-size: 250%;
   padding: 2%;
   width: fit-content;
@@ -142,7 +149,7 @@ body {
 }
 
 .tony-portfolio-description {
-  font-family: 'Abril Fatface', cursive;
+  font-family: 'Lato', sans-serif;
   font-size: 125%;
   text-align: start;
   width: 400px;
@@ -154,25 +161,10 @@ body {
 
 
 
-/* CONTACT STYLING */
-
-.contact-container {
-  min-height: 100vh;
-  margin-top: 10vh;
-}
-
-.contact-container h2 {
-  font-family: 'Expletus Sans', cursive;
-  font-size: 250%;
-  padding: 2%;
-  width: fit-content;
-  margin-left: auto;
-  margin-right: auto;
-  margin-bottom: 15vh;
-}
 
 /* 
-font-family: 'Abril Fatface', cursive;
+font-family: 'Lato', sans-serif;
+font-family: 'Roboto', sans-serif;
 
 Giving the divs below some physical attributes so they behave more 
 consistently as locations for the navigation bar to use.
@@ -191,6 +183,12 @@ consistently as locations for the navigation bar to use.
 }
 
 #contact-section {
+  width: 80%;
+  opacity: 0;
+  height: 1px;
+}
+
+#resume-section {
   width: 80%;
   opacity: 0;
   height: 1px;
